manifests/templates/service_oauth2-proxy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: default
  labels:
    name: oauth2-proxy
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8091
  selector:
    app: oauth2-proxy
