manifests/templates/ingress_cxg.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cellxgene-uuid
  labels:
    app: cellxgene
    instance: cellxgene-uuid
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/cellxgene-uuid$ /cellxgene-uuid/ redirect;
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy.default.svc.cluster.local:8091/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://minikube.local/oauth2/sign_in?rd=$escaped_request_uri
    nginx.org/max-conns: "1"
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: minikube.local
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /cellxgene-uuid(/|$)(.*)
        backend:
          service:
            name: cellxgene-uuid
            port:
              number: 5005
