manifests/templates/ingress_oauth2-proxy.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
  name: oauth2-proxy
spec:
  ingressClassName: nginx
  rules:
    - host: minikube.local
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 8091
